# pybank_slip

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/pybank_slip/: __init__.py  auth.py  interfaces.py  manager.py  utils.py
src/pybank_slip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pybank_slip/adapters/: __init__.py  bb_adapter.py  santander_adapter.py
