[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybank_slip"
version = "0.1.0"
description = "A framework-agnostic Python library to manage Brazilian bank slips (boletos) across multiple banks."
readme = "README.md"
authors = [
  { name = "Erick Fernando Martins Santos", email = "erickmartinslima3@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["boleto", "bank slip", "banco do brasil", "santander", "brazil", "payment"]
dependencies = [
    "requests>=2.28.0",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/erickovisck/pybank_slip"
