[metadata]
name = pybank_slip
version = 0.1.0
description = A framework-agnostic Python library to manage Brazilian bank slips (boletos) across multiple banks.
author = Erick Fernando Martins

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests>=2.28.0
python_requires = >=3.8

[options.packages.find]
where = src
